[gd_scene load_steps=25 format=3 uid="uid://dsucn6yegovhr"]

[ext_resource type="Texture2D" uid="uid://c4ojhkc1fjkoj" path="res://Art/Characters/slime.png" id="1_imy10"]
[ext_resource type="Script" path="res://Scripts/Enemies/BasicEnemy.gd" id="1_y1unw"]
[ext_resource type="PackedScene" path="res://Scenes/Components/HealthComponent.tscn" id="2_37op7"]
[ext_resource type="PackedScene" path="res://Scenes/Components/HitboxComponent.tscn" id="3_15032"]
[ext_resource type="PackedScene" path="res://Scenes/Components/HurtboxComponent.tscn" id="4_827q7"]
[ext_resource type="PackedScene" uid="uid://c4trest17eiso" path="res://Scenes/Components/HealthBar.tscn" id="7_l4m78"]

[sub_resource type="AtlasTexture" id="AtlasTexture_68bnb"]
atlas = ExtResource("1_imy10")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk0gr"]
atlas = ExtResource("1_imy10")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm7aw"]
atlas = ExtResource("1_imy10")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c04l4"]
atlas = ExtResource("1_imy10")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dq0b8"]
atlas = ExtResource("1_imy10")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cofmi"]
atlas = ExtResource("1_imy10")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yu7a"]
atlas = ExtResource("1_imy10")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cte0"]
atlas = ExtResource("1_imy10")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsiye"]
atlas = ExtResource("1_imy10")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kuja"]
atlas = ExtResource("1_imy10")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prq42"]
atlas = ExtResource("1_imy10")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_571jb"]
atlas = ExtResource("1_imy10")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlvqv"]
atlas = ExtResource("1_imy10")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jobop"]
atlas = ExtResource("1_imy10")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7mdw"]
atlas = ExtResource("1_imy10")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ohb7u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68bnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk0gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm7aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c04l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dq0b8")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cofmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yu7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cte0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsiye")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kuja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prq42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_571jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlvqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jobop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7mdw")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_skdr7"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3h7bf"]
radius = 48.0416

[node name="BasicEnemy" type="CharacterBody2D" groups=["Enemy"]]
y_sort_enabled = true
position = Vector2(0, -19)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_y1unw")

[node name="BasicEnemySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ohb7u")
animation = &"Idle"

[node name="BasicEnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_skdr7")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_3h7bf")

[node name="BasicEnemyHealth" parent="." instance=ExtResource("2_37op7")]

[node name="BasicEnemyHitbox" parent="." node_paths=PackedStringArray("Health") instance=ExtResource("3_15032")]
position = Vector2(0, 1)
collision_layer = 4
Health = NodePath("../BasicEnemyHealth")

[node name="BasicEnemyHitCollision" type="CollisionShape2D" parent="BasicEnemyHitbox"]
shape = SubResource("CircleShape2D_skdr7")

[node name="BasicEnemyHurtbox" parent="." instance=ExtResource("4_827q7")]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2
Damage_interval = 0.5

[node name="BasicEnemyHurtCollision" type="CollisionShape2D" parent="BasicEnemyHurtbox"]
shape = SubResource("CircleShape2D_skdr7")

[node name="BasicEnemyHealthBar" parent="." node_paths=PackedStringArray("Health_component") instance=ExtResource("7_l4m78")]
offset_left = -7.0
offset_top = 9.0
offset_right = 21.0
offset_bottom = 13.0
Health_component = NodePath("../BasicEnemyHealth")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
